tests/should_fail/const_c.c
int main() {
	int arr[const 5];
}
